# lab4

./: Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  main.py  pyproject.toml
back-end/: app.py
front-end/: app.py
front-end/templates/: index.html
