[tool.poetry]
name = "lab4-tochno-vse"
version = "0.1.0"
description = ""
authors = ["Alaska2222 <100542322+Alaska2222@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "lab4_tochno_vse"}]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
